# IIS_vaje

./: .gitignore  data.dvc  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: fetch_data.yml
.netlify/: netlify.toml
gx/: great_expectations.yml  run_checkpoint.py  setup_ge.py
gx/checkpoints/: air_quality_checkpoint.yml
gx/expectations/: .ge_store_backend_id  air_quality_suite.json
models/: model_E403.keras  model_E404.keras  model_E405.keras  model_E407.keras  model_E408.keras  model_E409.keras  model_E410.keras  model_E411.keras  model_E412.keras  model_E413.keras  model_E414.keras  model_E415.keras  model_E417.keras  model_E418.keras  model_E420.keras  model_E421.keras  model_E423.keras  model_E801.keras  model_E802.keras  model_E803.keras  model_E804.keras  pipeline_E403.pkl  pipeline_E404.pkl  pipeline_E405.pkl  pipeline_E407.pkl  pipeline_E408.pkl  pipeline_E409.pkl  pipeline_E410.pkl  pipeline_E411.pkl  pipeline_E412.pkl  pipeline_E413.pkl  pipeline_E414.pkl  pipeline_E415.pkl  pipeline_E417.pkl  pipeline_E418.pkl  pipeline_E420.pkl  pipeline_E421.pkl  pipeline_E423.pkl  pipeline_E801.pkl  pipeline_E802.pkl  (+3 more)
reports/data_testing/: .gitignore
site/evidently/: E403.html  E404.html  E405.html  E407.html  E408.html  E409.html  E410.html  E411.html  E412.html  E413.html  E414.html  E415.html  E417.html  E418.html  E420.html  E421.html  E423.html  E801.html  E802.html  E803.html  E804.html
site/ge/: index.html
src/data/: fetch_data.py  preprocess_air_data.py  test_data.py
src/models/: preprocess.py  train.py
(+51 files in other folders)
